<resources>
  <string name="add">add</string>
  <string name="add_voice">Add voice</string>
  <string name="adjust_amount">amount</string>
  <string name="adjust_black_point">black point</string>
  <string name="adjust_brightness">brightness</string>
  <string name="adjust_contrast">contrast</string>
  <string name="adjust_degree">degree</string>
  <string name="adjust_highlight">highlight</string>
  <string name="adjust_reset">reset</string>
  <string name="adjust_saturation">saturation</string>
  <string name="adjust_shadow">shadow</string>
  <string name="adjust_temperature">temperature</string>
  <string name="adjust_tint">tint</string>
  <string name="agree">Agree</string>
  <string name="app_name11">MYVideo</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="apply_all_caption">apply all caption</string>
  <string name="apply_all_clip">apply all clip</string>
  <string name="asset_download">Download</string>
  <string name="asset_downloadfinished">Finished</string>
  <string name="asset_loadfailed">Failed to load!</string>
  <string name="asset_loading">Loading…</string>
  <string name="asset_mismatch">Mismatch</string>
  <string name="asset_ratio">General</string>
  <string name="asset_update">Update</string>
  <string name="audio_max_track">audio max track %d</string>
  <string name="audio_num">audio num</string>
  <string name="audio_unable_cut">audio unable cut</string>
  <string name="beauty_buffing">buffing</string>
  <string name="beauty_ruddy">ruddy</string>
  <string name="beauty_whitening">whitening</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="cancel">Cancel</string>
  <string name="cancelCheckAll">Deselect</string>
  <string name="cancel_revert">cancel revert</string>
  <string name="caption_font_bold">bold</string>
  <string name="captureResolution">Resolution</string>
  <string name="change_caption_content">Click the dotted box to modify the caption</string>
  <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
  <string name="character_counter_pattern">%1$d / %2$d</string>
  <string name="checkAll">Select</string>
  <string name="cheek_thinning">Face</string>
  <string name="circle">circle</string>
  <string name="close_denoise">close denoise</string>
  <string name="close_original_voice">Close original voice</string>
  <string name="color_opacity">opacity</string>
  <string name="color_width">width</string>
  <string name="compile_cancel">Canceled</string>
  <string name="compound_caption_title_style">style</string>
  <string name="confirm">Confirm</string>
  <string name="contactBusiness">Move to the official website to contact business people</string>
  <string name="correctionColor">Correct</string>
  <string name="current_position_not_allow_cut">current position not allow cut</string>
  <string name="current_position_not_allow_freeze">current position not allow freeze</string>
  <string name="delete">delete</string>
  <string name="download_asset_ratio">asset ratio ：</string>
  <string name="download_asset_size">asset size ：</string>
  <string name="draft_box">draft box</string>
  <string name="draft_confirm">confirm</string>
  <string name="draft_delete_confirm">confirm delete?</string>
  <string name="draft_input_draft_name">input draft name</string>
  <string name="draft_manage">manager</string>
  <string name="draft_manage_cancel">cancel</string>
  <string name="draft_manage_rename">rename</string>
  <string name="draft_manage_start">start</string>
  <string name="draft_manager_copy">copy</string>
  <string name="draft_manager_delete">delete</string>
  <string name="draft_update_time">update time</string>
  <string name="edit_compile_info">Please do not lock the screen or switch to another application</string>
  <string name="effect_blur">blur</string>
  <string name="effect_dream">dream effect</string>
  <string name="effect_frame">frame effect</string>
  <string name="effect_lively">lively effect</string>
  <string name="effect_mosaic">mosaic</string>
  <string name="effect_shaking">shaking effect</string>
  <string name="eye_corner">EyeCor</string>
  <string name="eye_enlarging">Eyes</string>
  <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
  <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
  <string name="face_small">FacLen</string>
  <string name="face_thin">FacWid</string>
  <string name="feed_back_contact_way">contact way（QQ、wechat、phone）</string>
  <string name="feed_back_desc">describe question</string>
  <string name="feed_back_input_contact_way">input contact way</string>
  <string name="feed_back_submit">submit</string>
  <string name="feedback_ques_desc">ques desc</string>
  <string name="font_italics">italics</string>
  <string name="font_shadow">shadow</string>
  <string name="fourTThree">4:3</string>
  <string name="fragment_menu_beauty">beauty</string>
  <string name="fragment_menu_beauty_type">beauty_type</string>
  <string name="fragment_menu_table_all">all</string>
  <string name="fragment_menu_table_custom">custom</string>
  <string name="fragment_menu_water">water</string>
  <string name="fragment_menu_water_effect">effect</string>
  <string name="free">free</string>
  <string name="has_been_apply_to_all">has been apply to all</string>
  <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
  <string name="i_know">Got it</string>
  <string name="ic_add_voice_dubbing">dubbing</string>
  <string name="ic_add_voice_extract_music">extract music</string>
  <string name="ic_add_voice_music">music</string>
  <string name="int1080">1080p</string>
  <string name="int720">720p</string>
  <string name="intensity_chin">Chin</string>
  <string name="intensity_forehead">Forhead</string>
  <string name="intensity_mouth">Mouth</string>
  <string name="intensity_nose">Nose</string>
  <string name="letter_space_big">big</string>
  <string name="letter_space_more">more</string>
  <string name="letter_space_standard">standard</string>
  <string name="loading">Loading...</string>
  <string name="main_menu_name_add_theme">Add Theme</string>
  <string name="main_menu_name_adjust">adjust</string>
  <string name="main_menu_name_background">background</string>
  <string name="main_menu_name_caption">caption</string>
  <string name="main_menu_name_com_caption">combined caption</string>
  <string name="main_menu_name_dubbing">dubbing</string>
  <string name="main_menu_name_edit">edit</string>
  <string name="main_menu_name_edit_video">edit video</string>
  <string name="main_menu_name_filter">filter</string>
  <string name="main_menu_name_fx">effect</string>
  <string name="main_menu_name_music">audio</string>
  <string name="main_menu_name_picture_in_picture">picture in picture</string>
  <string name="main_menu_name_ratio">ratio</string>
  <string name="main_menu_name_sticker">sticker</string>
  <string name="main_menu_name_theme">Theme</string>
  <string name="main_menu_name_transition">transition</string>
  <string name="main_menu_name_water_mark">water mark</string>
  <string name="menu_sticker_all">all</string>
  <string name="menu_sticker_custom">custom</string>
  <string name="menu_tab_caption_colour">colour</string>
  <string name="menu_tab_caption_contour">contour</string>
  <string name="menu_tab_caption_decorate">decorate</string>
  <string name="menu_tab_caption_font">font</string>
  <string name="menu_tab_caption_input">input</string>
  <string name="menu_tab_caption_location">location</string>
  <string name="menu_tab_caption_space">space</string>
  <string name="menu_tab_watermark_effect_blur">blur</string>
  <string name="menu_tab_watermark_effect_mosaic">mosaic</string>
  <string name="more">more</string>
  <string name="moreAnimatedSticker">More Stickers</string>
  <string name="moreCaptionStyle">More Caption Styles</string>
  <string name="moreCompoundCaptionStyle">More CompoundCaption Styles</string>
  <string name="moreCustomStickerEffect">More Custom Effects</string>
  <string name="moreDreamEffect">More Dream Effects</string>
  <string name="moreFaceU">More Props</string>
  <string name="moreFilter">More Filters</string>
  <string name="moreFrameEffect">More Frame Effects</string>
  <string name="moreLivelyEffect">More Lively Effects</string>
  <string name="moreShakingEffect">More Shaking Effects</string>
  <string name="moreTheme">More Themes</string>
  <string name="moreTransition">More Transitions</string>
  <string name="moreTransition3D">More 3d transition</string>
  <string name="moreTransitionCommon">More common transition</string>
  <string name="moreTransitionEffect">More effect transition</string>
  <string name="mouse_corner">MouCor</string>
  <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
  <string name="music_default_size">00:00/00:10</string>
  <string name="music_local_music">local music</string>
  <string name="music_my_music">mine music</string>
  <string name="music_play_error">music play error</string>
  <string name="music_select">select music</string>
  <string name="music_use">use</string>
  <string name="network_strayed_try">The network is running out, please try again</string>
  <string name="nineTSixteen">9:16</string>
  <string name="no">no</string>
  <string name="noneMusic">none music</string>
  <string name="nose_long">LonNor</string>
  <string name="not_used">Not used</string>
  <string name="oneTone">1:1</string>
  <string name="open_denoise">open denoise</string>
  <string name="open_original_voice">open original voice</string>
  <string name="password_toggle_content_description">Show password</string>
  <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
  <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
  <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
  <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="privacy_statement">Agreement and policy</string>
  <string name="prompt">Tips</string>
  <string name="retry">Retry</string>
  <string name="revert_finish">revert finish</string>
  <string name="reverting">reverting</string>
  <string name="ruddy">Rosy</string>
  <string name="saved">compiled</string>
  <string name="search_menu_title">Search</string>
  <string name="select_media">Select Asset</string>
  <string name="select_production_proportion">Choose making ratio</string>
  <string name="select_the_second_video">Select the 2nd material</string>
  <string name="select_two_video">Choose 2 materials to make</string>
  <string name="service_agreement">Service Agreement</string>
  <string name="setSelectMedia">%1$d Assets</string>
  <string name="setting_auto_append">auto append</string>
  <string name="setting_feed_back">feed back</string>
  <string name="setting_privacy_policy">privacy policy</string>
  <string name="setting_user_agreements">user agreements</string>
  <string name="setting_versin_code">version code</string>
  <string name="sharpness">Sharpness</string>
  <string name="single_select_picture">single select picture</string>
  <string name="sixteenTNine">16:9</string>
  <string name="stayTuned">Stay tuned!</string>
  <string name="threeTFour">3:4</string>
</resources>