<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:id="@+id/pop_container" android:background="#6c000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_corn_select_ratio" android:layout_width="266.0dip" android:layout_height="296.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="40.0dip">
            <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_production_proportion" android:layout_centerInParent="true" />
        </RelativeLayout>
        <View android:layout_gravity="center_horizontal" android:background="#1affffff" android:layout_width="240.0dip" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="85.0dip">
            <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@+id/button16v9" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sixteenTNine" android:layout_weight="1.0" />
            <View android:background="#1affffff" android:layout_width="1.0dip" android:layout_height="72.0dip" android:layout_marginTop="13.0dip" />
            <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@+id/button9v16" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/nineTSixteen" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:layout_gravity="center_horizontal" android:background="#1affffff" android:layout_width="240.0dip" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="85.0dip">
            <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@+id/button4v3" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/fourTThree" android:layout_weight="1.0" />
            <View android:background="#1affffff" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@+id/button3v4" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/threeTFour" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:layout_gravity="center_horizontal" android:background="#1affffff" android:layout_width="240.0dip" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="85.0dip">
            <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@+id/button1v1" android:background="#00000000" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/oneTone" android:layout_weight="1.0" />
            <View android:background="#1affffff" android:layout_width="1.0dip" android:layout_height="72.0dip" android:layout_marginBottom="13.0dip" />
            <View android:background="#00000000" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>