<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/item_main" android:background="@drawable/draft_dialog_bg" android:layout_width="220.0dip" android:layout_height="125.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:layout_width="220.0dip" android:layout_height="1.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:layout_width="1.0dip" android:layout_height="125.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/sp14" android:textColor="@color/white_8" android:id="@+id/tv_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp30" android:text="@string/draft_delete_confirm" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <Button android:textSize="@dimen/sp14" android:textColor="@color/color_333333" android:id="@+id/bt_delete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/dp64" android:minHeight="@dimen/dp27" android:text="@string/delete" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/bt_cancel" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_info" />
    <Button android:textSize="@dimen/sp14" android:textColor="@color/white_8" android:id="@+id/bt_cancel" android:background="@color/colorTranslucent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/dp64" android:minHeight="@dimen/dp27" android:text="@string/cancel" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/bt_delete" app:layout_constraintTop_toBottomOf="@id/tv_info" />
</androidx.constraintlayout.widget.ConstraintLayout>